# phish-triage

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  run.bat  run.sh
examples/: iocs-pashasec-search-cve-pr-42-was-merged.csv  iocs-urgent-verify-your-microsoft-365-account.csv  report-pashasec-search-cve-pr-42-was-merged.md  report-urgent-verify-your-microsoft-365-account.md
phish_triage/: __init__.py  __main__.py  attachments.py  cli.py  domain.py  enrich.py  headers.py  mitre.py  parser.py  report.py  urls.py  verdict.py
tests/: test_triage.py
tests/fixtures/: sample-clean.eml  sample-phish.eml
